fixed profile icon on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -102,6 +102,10 @@
   .nav-element-desktop {
     @apply flex;
   }
+
+  .nav-element-mobile {
+    @apply hidden;
+  }
 }
 
 @media screen and (min-width: 1024px) {
